firmware/defmt-test/macros/tests/ui/tests-has-argument.stderr
error: `#[test]` attribute takes no arguments
 --> tests/ui/tests-has-argument.rs:3:1
  |
3 | #[defmt_test_macros::tests(tests)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `defmt_test_macros::tests` (in Nightly builds, run with -Z macro-backtrace for more info)
