firmware/defmt-test/macros/tests/ui/tests-has-argument.rs
fn main() {}

#[defmt_test_macros::tests(tests)]
mod tests {
}
